# trouser_snake_beta

trouser_snake/: setup.cfg
trouser_snake/source/: conf.py
trouser_snake/trouser_snake/: main.py  models.py  views.py
trouser_snake/trouser_snake/tests/: test_models.py
trouser_snake_beta_refactoring/: requirements.txt  setup.py
trouser_snake_beta_refactoring/source/: index.rst
trouser_snake_beta_refactoring/trouser_snake/: main.py  models.py  settings.py  views.py
