[metadata]
name = trouser snake
author = Savan Yim
author-email = yimsavan@gmail.com
license = MIT
long_description = file: README.rst
url = https://www.bitbucket.com/13nuse/trouser_snake
requires-python = >=2.7
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: End Users
    Intended Audience :: Gamers
    License :: MIT
    Operating system :: OS Independent
    Programming Language :: Python
    